Update index.html with tracer2

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,10 @@
        });
     </script>
 
+    <script>
+        const Provider=SplunkRum.provider;
+        var tracer2=Provider.getTracer('appPacmanLoader')
+    </script>
 
 </head>
 
