--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 
     <script>
         const Provider=SplunkRum.provider;
-        var tracer2=Provider.getTracer('appPacmanLoader')
+        var tracer2=Provider.getTracer('appModuleLoader');
     </script>
 
 </head>
