--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
         const Provider=SplunkRum.provider;
         var tracer=Provider.getTracer('appModuleLoader');
         var span = tracer.startSpan('PlayGame', {
-            attributes: { 'workflow.name" : 'playGame',
+            attributes: { 'workflow.name' : 'playGame',
                          'userID': 'Platty'
         }
         });
