--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,17 @@
 <!-- Live Stats -->
 <div class="content" id="livestats-content">
     <div class="button" id="back">&lt; back</div>
-    <div>
+    
+<script>
+        
+        var span = tracer.startSpan('highScore', {
+            attributes: { 'workflow.name' : 'LiveStats',
+                         'userID': 'Platty'
+        }
+        });
+    span.end();
+    </script>
+<div>
         <h1>Live Stats</h1>
         <p>
             <table id="livestats-table">
@@ -304,7 +314,14 @@
 </div>
 </div>
 
-    <script src="pacman-canvas.js" type="text/javascript"></script>
+    <script src="pacman-canvas.js" type="text/javascript">
+var span = tracer.startSpan('canvas', {
+            attributes: { 'workflow.name' : 'canvas',
+                         'userID': 'Platty'
+        }
+        });
+    span.end();
+</script>
 
 
 </body>
